--- a/GameLib/GameLib.csproj
+++ b/GameLib/GameLib.csproj
@@ -47,6 +47,7 @@
     <Compile Include="screen.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="ShapeObject.cs" />
     <Compile Include="Vector2.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Window.cs" />
