--- a/GameLib/GameLib.csproj
+++ b/GameLib/GameLib.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Game.cs" />
+    <Compile Include="Input.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="screen.cs">
       <SubType>Form</SubType>
